.archive/kubernetes/apps/traefik-system/add-ons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "traefik.${SECRET_INTERNAL_DOMAIN}"
  rules:
    - host: "traefik.${SECRET_INTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
